# Agglomerative_Clustering

./: README.md
Agglomerative_Clustering/Agglomerative_Clustering.xcodeproj/: project.pbxproj
Agglomerative_Clustering/Agglomerative_Clustering.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Agglomerative_Clustering/Agglomerative_Clustering.xcodeproj/project.xcworkspace/xcuserdata/jrob.xcuserdatad/: UserInterfaceState.xcuserstate
Agglomerative_Clustering/Agglomerative_Clustering.xcodeproj/xcuserdata/jrob.xcuserdatad/xcschemes/: Agglomerative_Clustering.xcscheme  xcschememanagement.plist
cpp/: CMakeLists.txt  Cluster.cpp  Cluster.hpp  ClusterUtils.cpp  ClusterUtils.hpp  Clustering.cpp  Clustering.hpp  Sample.cpp  Sample.hpp  agglomerative.cpp  agglomerative.hpp  main.cpp
matlab/: README.txt  setup.m
matlab/+eval/: ClusterMetrics.m  cluster_pairwise_stats.m  eval_all.m  pairwise_precision.m  pairwise_recall.m  pairwise_specificity.m
matlab/+visualize/: class_confusion.m  cluster_confusion.m  precision_vs_k.m
matlab/demo/: agglomerative_clustering_ex.m  rank_order_distance_ex.m
matlab/demo/data/: DMatrix.mat  kdtree_100.mat  synthetic_data_200_samples.csv  synthetic_data_200samples.mat
matlab/rankorder/: calculate_rank_order_distance.m  rank_order.m  transitively_merge_clusters.m
matlab/utils/: build_kdtrees.m  load_rank_order_results.m  set_class_ids.m  write_dmatrix.m
